@@ -119,4 +119,6 @@ buildroot-1.11 2011-xx-xx <gnutt@nuttx.org>
 	* Add support for binutils 2.22 and GCC 4.6.3.
 	* Change name of all tools from xxx-elf to xxx-nuttx-elf
 	* Added an ARM EABI GCC 4.6.3 configuration (tool name is arm-nuttx-eabi-).
+	* ldnxflat: Add support for the R_ARM_REL32 relocation.  This relocation
+	  type was not generated by GCC/LD prior to gcc-4.6.3
 
